# TTS_RP_Model_Lab

./: .gitignore  README.md  flash_attn_install.md  initialize.py  main_loop.py  memory_and_emotion.md  pyproject.toml  requirements.txt  sbv2_core_legacy.md  sqlite.md
data/: fsm_document.md  initialize.py  version_diff_original_v2_v3.md
data/grpog/: README.md  build_grpo_dataset.py
data/original/: README.md
data/others/: v5_data_preprocessing.py  v5_gpt_jp_translate.py  v5_jp_translate.py
data/rewrite/: README.md  common.py  rewrite_with_gpt_api.py  rewrite_with_local_llm.py
data/singleturn/: data_generator_gpt.py  data_generator_local.py  jsonl_to_translation_sft.py  singleturn_message_converter.py  singleturn_normalize.py
data/version_2/: README.md  v6_base_fsm.yaml
data/version_3/: README.md
docs/: branching-strategy.md
models/Style-BERT-VITS2/: .gitignore  README.md  app.py  convert_bert_onnx.py  convert_onnx.py  pyproject.toml  requirements.txt  rt5080method.md  sbv2_worker.py  shim.md  slice.py  style_gen.py
models/qwen3_core/: grpo_trainer.md  grpo_trainer.py  grpo_trainer_colab.py  grpo_trainer_kanana.py  grpo_trainer_old.py  grpo_trainer_vlm.py  infer_base.py  infer_kanana_lora.py  infer_kanana_merged.py  infer_singleturn_lora.py  infer_singleturn_merged.py  infer_translate_lora.py  infer_vlm_lora.py  infer_vlm_merged.py  initialize.py  merge.py  merge_gemma.py  merge_kanana.py  merge_vlm.py  sft_trainer_hf.py  sft_trainer_qlora.py  sft_trainer_qlora2.py  sft_trainer_qlora_kanana.py  sft_trainer_qlora_vlm.py  sft_trainer_translator.py  trainer.md
models/qwen3_reference/: cache.py  causal_lm.py  config.py  model.py  test_load_qwen3.py
models/sbv2_core/: bert_gen.py  config.py  config.yml  convert_bert_onnx.py  convert_onnx.py  data_utils.py  default_config.yml  default_style.py  gen_yaml.py  initialize.py  losses.py  make_style_vectors_cli.py  make_transcription.py  mel_processing.py  preprocess_all.py  preprocess_text.py  pyproject.toml  requirements.txt  requirements_cpu.txt  requirements_original.txt  resample.py  roadmap.md  run_infer.py  sbv2_worker.py  slice.py  style_gen.py  train_ms.py  train_ms_jp_extra.py  transcription_extractor.py  wavs
models/sbv2_core/configs/: config.json  config_jp_extra.json  default_paths.yml
models/sbv2_core/dict_data/: .gitignore  default.csv
models/sbv2_core/gradio_tabs/: convert_onnx.py  dataset.py  inference.py  merge.py  style_vectors.py  train.py
models/sbv2_core/sbv_runtime/: README.md  __init__.py  cli.py  engine.py  requirements_runtime_onnx.txt
models/sbv2_core/sbv_runtime/style_bert_vits2/: voice.py
models/sbv2_core/sbv_runtime/style_bert_vits2/nlp/japanese/: normalizer.py
models/sbv2_core/sbv_runtime/style_bert_vits2/nlp/japanese/user_dict/: README.md
models/sbv2_core/style_bert_vits2/: .editorconfig
models/sbv2_core/style_bert_vits2/models/: attentions.py  commons.py  infer.py  models.py  models_jp_extra.py  modules.py  monotonic_alignment.py  transforms.py
models/sbv2_core/style_bert_vits2/models/utils/: __init__.py  checkpoints.py  safetensors.py
models/sbv2_core/style_bert_vits2/nlp/: __init__.py  onnx_bert_models.py
models/sbv2_core/style_bert_vits2/nlp/chinese/: bert_feature.py  g2p.py  normalizer.py  tone_sandhi.py
models/sbv2_core/style_bert_vits2/nlp/english/: bert_feature.py  cmudict.py  g2p.py  normalizer.py
models/sbv2_core/style_bert_vits2/nlp/japanese/: g2p.py  g2p_utils.py
models/sbv2_core/style_bert_vits2/nlp/japanese/pyopenjtalk_worker/: __init__.py  __main__.py
models/sbv2_core/style_bert_vits2/nlp/japanese/user_dict/: __init__.py
models/sbv2_core/style_bert_vits2/utils/: subprocess.py
models/sbv2_reference/: README.md
models/style_bert_vits2/: README.md
outputs/memory/: memory.sqlite3  memory.sqlite3-shm  memory.sqlite3-wal
system/: langgraph_pipeline.py  llm_engine.py  memory_chain.py  native_fc_engine.py  native_fc_pipeline.py  prompt_compiler.py  router.py  rp_parser.py  state_machine.py  system_document.md  tool_use_pipeline.py  translator.py  tts_worker_client.py  vlm_engine.py  vlm_langgraph_pipeline.py
system/utils/: text_split.py
system/webapi/: README.md  __init__.py  api_architecture.md  app.py  demo.py  schemas.py  services.py
system/webapi_native_fc/: __init__.py  api_architecture.md  app.py  (+2 more)
(+166 files in other folders)
