[project]
name = "saya-char-qwen2-5"
version = "0.1.0"
description = "Qwen + Vision + Multimodal Research"
requires-python = ">=3.10,<3.12"

dependencies = [
    # ===== Core =====
    "numpy<2",
    "typing-extensions",
    "python-dotenv",

    # ===== LLM / data =====
    "transformers>=4.40",
    "accelerate>=0.27",
    "peft",
    "safetensors>=0.4",
    "einops>=0.7",
    "sentencepiece",
    "datasets>=2.19",
    "trl>=0.8",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "sqlite-vec>=0.1.6",
    "huggingface_hub>=0.24",
    "openai>=1.40",
    "tqdm>=4.66",
    "fastapi>=0.112",
    "uvicorn>=0.30",
    "gradio>=4.40",
    "httpx>=0.27",
    # ===== SBV2 / TTS / ONNX runtime =====
    "librosa==0.9.2",
    "soundfile",
    "soxr",
    "scipy",
    "onnx",
    "onnxconverter-common",
    "onnxsim-prebuilt",
    "onnxruntime==1.23.2",
    "onnxruntime-gpu==1.23.2; sys_platform != 'darwin'",
    "onnxruntime-directml; sys_platform == 'win32'",
    "pyopenjtalk",
    "pyopenjtalk-dict",
    "jaconv",
    "g2p-en",
    "cmudict",
    "cn2an",
    "num2words",
    "pypinyin",
    "jieba",
    "pyworld-prebuilt",
    "pyloudnorm",
    "punctuators",
    "psutil",
    "loguru",
    "umap-learn",
    "stable-ts",
    "tensorboard",
    # pyopenjtalk portability helpers
    "setuptools==80.9.0",
    "wheel>=0.43",
    "cmake>=3.20",
    # SBV2 training-related
    "pyannote.audio==3.4.0",
    "torchmetrics==1.8.2",
    "pytorch-lightning==2.6.0",
    "lightning==2.6.0",
    # ===== Repro snapshot (restored) =====
    "anthropic==0.71.0",
    "bitsandbytes==0.49.1",
    "compressed-tensors==0.13.0",
    "cupy-cuda12x==13.6.0; sys_platform == 'linux'",
    "fastapi-cli==0.0.20",
    "flashinfer-python==0.5.3; sys_platform == 'linux'",
    "mcp==1.25.0",
    "prometheus-fastapi-instrumentator==7.1.0",
    "ray==2.53.0; sys_platform == 'linux'",
    "uvloop==0.22.1; sys_platform != 'win32'",
    "vllm==0.14.0; sys_platform == 'linux'",
    "watchfiles==1.1.1",
    "sqlalchemy==2.0.45",
]

[project.optional-dependencies]
# RTX 50xx 등 환경 차이를 고려해 torch 계열은 기본 설치에서 분리한다.
torch = [
    "torch",
    "torchvision==0.24.1",
    "torchaudio==2.9.1",
]

[tool.uv]
reinstall = false
