[project]
name = "sbv2-core"
version = "0.1.0"
description = "Style-BERT-VITS2 core environment"
requires-python = ">=3.9"

dependencies = [
  # ===== core (torch 제외) =====
  "accelerate",
  "cmudict",
  "cn2an",
  "g2p_en",
  "GPUtil",
  "gradio>=4.32",
  "jieba",
  "librosa==0.9.2",
  "loguru",
  "nltk<=3.8.1",
  "num2words",
  "numpy<2",
  "onnx",
  "onnxconverter-common",
  "onnxruntime",
  "onnxsim-prebuilt",
  "protobuf==4.25",
  "psutil",
  "punctuators",
  "pydantic>=2",
  "pyloudnorm",
  "pyopenjtalk",
  "pyopenjtalk-dict",
  "pypinyin",
  "scipy",
  "soundfile",
  "setuptools<81",
  "wheel>=0.43",
  "cmake>=3.20",
  "jaconv",
  "pyworld-prebuilt",
  "stable_ts",
  "tensorboard",
  "umap-learn",
  "transformers==4.36.2",
]

[project.optional-dependencies]
torch = [
  "torch",
  "torchvision",
  "torchaudio",
]

cpu_torch = [
  "torch==2.1.2",
  "torchvision==0.16.2",
  "torchaudio==2.1.2",
]

windows = [
  "onnxruntime-directml",
]

non_darwin = [
  "onnxruntime-gpu",
]

train = [
  "pyannote.audio>=3.1,<3.2",
  "torchmetrics>=0.11,<1.3",
  "pytorch-lightning>=2.1,<2.3",
  "lightning-fabric>=2.1,<2.3",
]
